tests/elab/errors/pattern_matching/inexhaustive_let.snapshot
exit status: 1

stdout = """
def foo: Bool -> Bool = fun(x: Bool) => #error;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
10..42 | fun(x: Bool) => let false = x; x         | Bool -> Bool
17..21 | Bool                                     | Type
26..42 | let false = x; x                         | Bool
38..39 | x                                        | Bool
41..42 | x                                        | Bool
types of patterns:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
14..15 | x                                        | Bool
30..35 | false                                    | Bool
metavars:
?0 = Bool -> Bool
"""

stderr = """
error: inexhaustive pattern match
  ┌─ tests/elab/errors/pattern_matching/inexhaustive_let.pion:1:39
  │
1 │ def foo = fun(x: Bool) => let false = x; x;
  │                                       ^

aborting due to 1 previous error
"""
